# HomeWork

./: .gitignore  .gitmodules  CMakeLists.txt  HomeWork3.cpp  HomeWork3.h
HomeWork10/: CMakeLists.txt  HomeWork10.cpp  HomeWork10.h
HomeWork11/: CMakeLists.txt  HomeWork11.cpp  HomeWork11.h
HomeWork12/: CMakeLists.txt  HomeWork12.cpp  HomeWork12.h
HomeWork13/: CMakeLists.txt  HomeWork13.cpp  HomeWork13.h
HomeWork14/: CMakeLists.txt  HomeWork14.cpp  HomeWork14.h
HomeWork15/: CMakeLists.txt  HomeWork15.cpp  HomeWork15.h
HomeWork16/: CMakeLists.txt  HomeWork16.cpp  HomeWork16.h
HomeWork17/: CMakeLists.txt  HomeWork17.cpp  HomeWork17.h
HomeWork4/: CMakeLists.txt  HomeWork4.cpp  HomeWork4.h
HomeWork5/: CMakeLists.txt  HomeWork5.cpp  HomeWork5.h
HomeWork6/: CMakeLists.txt  HomeWork6.cpp  HomeWork6.h
HomeWork7/: CMakeLists.txt  HomeWork7.cpp  HomeWork7.h
HomeWork9/: CMakeLists.txt  HomeWork9.cpp  HomeWork9.h
